added oauth and jwt verification in RNR portal